feat:seat reservation system: implement section filtering, real-time status updates, prevent double-booking, fix backend bugs